# dso_catkin

./: CMakeLists.txt  README.md  dso_driver_nodelet.xml  package.xml
evaluate/: dso_akaze.txt  dso_plain.txt  gt.txt
include/: dso_ros.h
include/FullSystem/: HessianBlocks.h  ResidualProjections.h  Residuals.h
include/util/: DatasetReader.h  ImageAndExposure.h  globalFuncs.h  settings.h
include/util/akaze/: AKAZE.h
launch/: dso_ros.launch
paper/: abstract.tex  conclusion.tex  datasets.tex  format_table.tex  introduction.tex  irap_SIunits.sty  irap_acronyms.sty  irap_math.sty  irap_misc.sty  iros2019-jhlee.bib  iros2020-jhlee.bib  iros2020-jhlee.tex  method.tex  outline.pptx  result.tex  seq_table.tex  string-short.bib
paper/admin/papercheck/: KAIST-IRAP-190226-to_method.docx
src/: main.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseTracker.cpp  FullSystem.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  ImmaturePoint.cpp  PixelSelector2.cpp  Residuals.cpp
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  PangolinDSOViewer.cpp
src/util/: DatasetReader.h  MinimalImage.h  globalCalib.cpp  settings.cpp
src/util/akaze/: AKAZE.cpp  akaze_compare.cpp  akaze_features.cpp  akaze_match.cpp  fed.cpp  kazeutils.cpp  nldiffusion_functions.cpp
