<?xml version="1.0"?>
<package>
  <name>dso_ros</name>
  <version>0.0.1</version>
  <description>dso_ros catkin_make migration</description>

  <maintainer email="alex_jhlee@kaist.ac.kr">jhlee</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ros_bridge</build_depend>
  <build_depend>libzip</build_depend>
  <build_depend>SuiteParse</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ros_bridge</run_depend>
  <run_depend>libzip</run_depend>
  <run_depend>SuiteParse</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>tf</run_depend>

</package>
